Implemented PHY receiver side (not unittested)

--- a/telecommand/test/CMakeLists.txt
+++ b/telecommand/test/CMakeLists.txt
@@ -2,8 +2,10 @@ cmake_minimum_required(VERSION 3.13)
 project("unit tests")
 
 set(MAIN_PROJECT ${CMAKE_SOURCE_DIR}/../)
-include_directories(${MAIN_PROJECT}/src/coding_layer)
-
+include_directories(${MAIN_PROJECT}/inc)
+include_directories(${MAIN_PROJECT}/../lpc_chip_11cxx_lib/inc)
+include_directories(${MAIN_PROJECT}/../nxp_lpcxpresso_11c24_board_lib/inc)
+add_definitions(-DCORE_M0 -D__USE_LPCOPEN)
 
 SET(CMAKE_CXX_FLAGS "-g -O0 -fprofile-arcs -ftest-coverage")
 SET(CMAKE_C_FLAGS "-g -O0 -fprofile-arcs -ftest-coverage")
@@ -15,11 +17,24 @@ set(CMOCKA_SOURCE
 	 ${CMAKE_SOURCE_DIR}/cmocka/src/cmocka.def)
 
 set(TEST_SOURCES 
+    ${MAIN_PROJECT}/../lpc_chip_11cxx_lib/src/i2c_11xx.c
+    ${MAIN_PROJECT}/../lpc_chip_11cxx_lib/src/clock_11xx.c
+    ${MAIN_PROJECT}/../lpc_chip_11cxx_lib/src/uart_11xx.c
+    ${MAIN_PROJECT}/../lpc_chip_11cxx_lib/src/gpio_11xx_1.c
+    ${MAIN_PROJECT}/../lpc_chip_11cxx_lib/src/gpio_11xx_2.c
+    ${MAIN_PROJECT}/../lpc_chip_11cxx_lib/src/ring_buffer.c
+    ${MAIN_PROJECT}/../nxp_lpcxpresso_11c24_board_lib/src/board.c
     ${MAIN_PROJECT}/src/coding_layer/cltu.c
+    ${MAIN_PROJECT}/src/coding_layer/code_block.c
+    ${MAIN_PROJECT}/src/physical_layer/physical_layer.c
+    ${MAIN_PROJECT}/src/buffer.c
     )
 
 # ADD YOUR TEST HERE!!!
-LIST(APPEND tests_names "coding_layer_test")
+LIST(APPEND tests_names "test_coding_layer")
+LIST(APPEND tests_names "test_buffer")
+LIST(APPEND tests_names "test_phy_master")
+LIST(APPEND tests_names "test_phy_slave")
 
 # Declare all tests targets
 ENABLE_TESTING()
@@ -41,6 +56,6 @@ setup_target_for_coverage_gcovr_html(
     NAME test_coverage                          # New target name
     EXECUTABLE ctest      # Executable in PROJECT_BINARY_DIR
     BASE_DIRECTORY ${CMAKE_BINARY_DIR}
-    DEPENDENCIES coding_layer_test
+    DEPENDENCIES test_coding_layer test_buffer test_phy_master test_phy_slave
     EXCLUDE ${CMAKE_SOURCE_DIR}/cmocka/*
     )
